objects/Applied_Incentive__c.object
<CustomObject>
    <description>A junction object connecting Incentives with Opportunities.</description>
    <fields>
        <fullName>Incentive_ID__c</fullName>
        <label>Incentive</label>
        <referenceTo>Incentive__c</referenceTo>
        <relationshipLabel>Applied Incentives</relationshipLabel>
        <relationshipName>Applied_Incentives</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>The associated Opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applied Incentives</relationshipLabel>
        <relationshipName>Applied_Incentives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Was_Sent_For_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, payment tasks were generated for this Applied Incentive.</description>
        <label>Was Sent For Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>Applied Incentive</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Applied Incentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>